# glou

./: .gitignore  Cargo.toml  README.md  example.frag  rust-toolchain.toml  splat.frag
src/: canvas.rs  gui.rs  main.rs  ui.rs
src/canvas/: error.rs  mod.rs  program.rs  shader.rs  uniforms.rs
src/gui/: bar.rs  errors.rs  mod.rs  tools.rs
src/gui/canvas/: mod.rs  shader.rs  uniforms.rs
src/renderer/: mod.rs  shader.rs  uniforms.rs
