[package]
name = "glou"
description = "A GLSL shader viewer, and debugger, hopefully."
license = "GPL-3.0"
documentation = "https://docs.rs/glou"
repository = "https://github.com/Nurrl/glou"
readme = "README.md"
keywords = ["glsl", "shadercoding", "livecoding"]
authors = ["Maya the bee <15341887+Nurrl@users.noreply.github.com>"]
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.50"
scopeguard = "1.2.0"

eframe = "0.24.1"
rfd = "0.12.1"
ndi = "0.1.2"
